Add feature extraction part

--- a/FeatureExtraction/fe.bib
+++ b/FeatureExtraction/fe.bib
@@ -33,3 +33,61 @@
   year={2009},
   publisher={Hindawi Publishing Corp.}
 }
+
+@article{soille:pesaresi,
+    Author         = {P. Soille and M. Pesaresi},
+    Journal        = "{IEEE} Trans. Geosci. Remote Sens",
+    Month          = sep,
+    Number         = {9},
+    Pages          = {2042-2055},
+    Title          = {Advances in Mathematical Morphology Applied to Geoscience and remote Sensing},
+    Volume         = {40},
+    Year           = {2002}
+}
+
+
+@book{chein2007hyperspectral,
+  title={Hyperspectral Data Exploitation: Theory and Applications},
+  author={C.-I Chang},
+  year={2007},
+  publisher={Wiley}
+}
+@ARTICLE{4069122,
+author={Serpico, S.B. and Moser, G.},
+journal= {Geoscience and Remote Sensing, IEEE Transactions on},
+title={Extraction of Spectral Channels From Hyperspectral Images for Classification Purposes},
+year={2007},
+month={Feb},
+volume={45},
+number={2},
+pages={484-495},
+}
+@InProceedings{lebris:fs,
+  author = 	 {N. Chehata and A. Le Bris and S. Najjar},
+  title = 	 { Contribution of band selection and fusion for hyperspectral classification},
+  booktitle = {Proc. of the IEEE WHISPERS'14},
+  year = 	 {2014},
+}
+
+@article{tuia2014automatic,
+ author = { Tuia, D. and Volpi, M. and Dalla Mura, M. and Rakotomamonjy, A. and Flamary, R. },
+ title = { Automatic Feature Learning for Spatio-Spectral Image Classification With Sparse {SVM} }, 
+ journal = {Geoscience and Remote Sensing, IEEE Transactions on},
+ volume = { PP },
+ number = { 99 },
+ pages = { 1-13 },
+ year = { 2014 } 
+ }
+
+@ARTICLE{7847352,
+author={A. Lagrange and M. Fauvel and M. Grizonnet},
+journal={IEEE Transactions on Computational Imaging},
+title={Large-scale feature selection with Gaussian mixture models for the classification of high dimensional remote sensing images},
+year={2017},
+volume={PP},
+number={99},
+pages={1-1},
+keywords={Covariance matrices;Earth;Feature extraction;Gaussian mixture model;Hyperspectral imaging;Imaging;fast computing;feature selection;gaussian mixture model;hyperspectral imaging;remote sensing},
+doi={10.1109/TCI.2017.2666551},
+ISSN={2333-9403},
+month={},}
